--- a/app/src/main/res/layout/student_list_item_2.xml
+++ b/app/src/main/res/layout/student_list_item_2.xml
@@ -23,6 +23,7 @@
         android:text="TextView"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/studentAvatarIV" />
